[package]
name = "voxel-planet"
version = "0.1.0"
edition = "2021"
description = "A voxel planet engine: 1/128 Earth-scale planet with solar system, biomes, weather, and character controller"

[[bin]]
name = "voxel-planet"
path = "src/main.rs"

[dependencies]
bevy = { version = "0.14", features = ["dynamic_linking"] }
noise = "0.9"
rand = "0.8"

[profile.dev]
opt-level = 1

[profile.release]
opt-level = 3
lto = "thin"
codegen-units = 1
