[workspace]
resolver = "2"
members = [
    "crates/nf_core",
    "crates/nf_game",
    "crates/nf_render",
    "crates/nf_assets",
    "crates/nf_scene",
    "crates/nf_prefab",
    "crates/nf_commands",
    "crates/nf_gizmos",
    "crates/nf_selection",
    "crates/nf_editor_core",
    "crates/nf_editor_ui",
    "crates/nf_editor_viewport",
    "crates/nf_editor_outliner",
    "crates/nf_editor_details",
    "crates/nf_editor_content",
    "crates/nf_editor_scene",
    "crates/nf_editor_play",
    "crates/nf_editor_log",
    "crates/nf_editor_project",
    "crates/nf_runtime_app",
    "crates/nf_editor_app",
]

# ────────────────────────────────────────────────────────────
# Shared dependency versions pinned once for the entire workspace.
# Individual crates opt-in with `{ workspace = true }`.
# ────────────────────────────────────────────────────────────
[workspace.dependencies]
bevy        = { version = "0.14" }
# bevy_egui 0.28.x targets bevy 0.14
bevy_egui   = { version = "0.28", default-features = false, features = ["default_fonts"] }
serde       = { version = "1",    features = ["derive"] }
ron         = "0.8"
uuid        = { version = "1",    features = ["v4", "serde"] }

# Workspace-internal crates
nf_core              = { path = "crates/nf_core" }
nf_game              = { path = "crates/nf_game" }
nf_render            = { path = "crates/nf_render" }
nf_assets            = { path = "crates/nf_assets" }
nf_scene             = { path = "crates/nf_scene" }
nf_prefab            = { path = "crates/nf_prefab" }
nf_commands          = { path = "crates/nf_commands" }
nf_gizmos            = { path = "crates/nf_gizmos" }
nf_selection         = { path = "crates/nf_selection" }
nf_editor_core       = { path = "crates/nf_editor_core" }
nf_editor_ui         = { path = "crates/nf_editor_ui" }
nf_editor_viewport   = { path = "crates/nf_editor_viewport" }
nf_editor_outliner   = { path = "crates/nf_editor_outliner" }
nf_editor_details    = { path = "crates/nf_editor_details" }
nf_editor_content    = { path = "crates/nf_editor_content" }
nf_editor_scene      = { path = "crates/nf_editor_scene" }
nf_editor_play       = { path = "crates/nf_editor_play" }
nf_editor_log        = { path = "crates/nf_editor_log" }
nf_editor_project    = { path = "crates/nf_editor_project" }

[profile.dev]
opt-level = 1

[profile.release]
opt-level     = 3
lto           = "thin"
codegen-units = 1
