[package]
name    = "atlas_editor_app"
version = "0.1.0"
edition = "2021"
description = "Editor executable — composes all editor plugins around the voxel planet engine."

[[bin]]
name = "atlas_editor_app"
path = "src/main.rs"

[dependencies]
bevy = { workspace = true }
bevy_egui             = { workspace = true }
atlas_core               = { workspace = true }
atlas_render             = { workspace = true }
atlas_assets             = { workspace = true }
atlas_scene              = { workspace = true }
atlas_prefab             = { workspace = true }
atlas_commands           = { workspace = true }
atlas_gizmos             = { workspace = true }
atlas_selection          = { workspace = true }
atlas_voxel_planet       = { workspace = true }
atlas_editor_core        = { workspace = true }
atlas_editor_ui          = { workspace = true }
atlas_editor_viewport    = { workspace = true }
atlas_editor_outliner    = { workspace = true }
atlas_editor_details     = { workspace = true }
atlas_editor_content     = { workspace = true }
atlas_editor_scene       = { workspace = true }
atlas_editor_play        = { workspace = true }
atlas_editor_log         = { workspace = true }
atlas_editor_project     = { workspace = true }
atlas_editor_world_settings = { workspace = true }
atlas_editor_voxel_tools    = { workspace = true }
