[package]
name    = "atlas_editor_content"
version = "0.1.0"
edition = "2021"
description = "Content Browser panel: folder tree, asset grid, search/filter, drag-drop into scene."

[dependencies]
bevy           = { workspace = true }
bevy_egui      = { workspace = true }
atlas_core        = { workspace = true }
atlas_assets      = { workspace = true }
atlas_editor_core = { workspace = true }
