[package]
name    = "atlas_editor_details"
version = "0.1.0"
edition = "2021"
description = "Details/Inspector panel: component fields, add/remove component, prefab override status."

[dependencies]
bevy           = { workspace = true }
bevy_egui      = { workspace = true }
atlas_core        = { workspace = true }
atlas_editor_core = { workspace = true }
atlas_selection   = { workspace = true }
atlas_commands    = { workspace = true }
atlas_voxel_planet = { workspace = true }
