[package]
name    = "atlas_editor_log"
version = "0.1.0"
edition = "2021"
description = "Output Log panel: errors, warnings, info, asset import messages, build output."

[dependencies]
bevy           = { workspace = true }
bevy_egui      = { workspace = true }
atlas_core        = { workspace = true }
atlas_editor_core = { workspace = true }
tracing        = "0.1.44"
