[package]
name    = "atlas_editor_outliner"
version = "0.1.0"
edition = "2021"
description = "World Outliner panel: entity hierarchy, search, visibility/lock toggles, drag-drop reparent."

[dependencies]
bevy           = { workspace = true }
bevy_egui      = { workspace = true }
atlas_core        = { workspace = true }
atlas_editor_core = { workspace = true }
atlas_selection   = { workspace = true }
atlas_commands    = { workspace = true }
atlas_voxel_planet = { workspace = true }
