[package]
name    = "atlas_editor_scene"
version = "0.1.0"
edition = "2021"
description = "Scene panel: open/save/new scene, dirty-state tracking, recent scenes."

[dependencies]
bevy           = { workspace = true }
bevy_egui      = { workspace = true }
ron            = { workspace = true }
atlas_core        = { workspace = true }
atlas_scene       = { workspace = true }
atlas_editor_core = { workspace = true }
atlas_commands    = { workspace = true }
atlas_selection   = { workspace = true }
