[package]
name    = "atlas_editor_voxel_tools"
version = "0.1.0"
edition = "2021"
description = "Voxel editing tools panel: palette, brush, ray-cast place/remove/paint, and undo commands."

[dependencies]
bevy          = { workspace = true }
bevy_egui     = { workspace = true }
atlas_editor_core  = { workspace = true }
atlas_selection    = { workspace = true }
atlas_voxel_planet = { workspace = true }
atlas_commands     = { workspace = true }
