[package]
name    = "atlas_editor_world_settings"
version = "0.1.0"
edition = "2021"
description = "World Settings panel: live-editable voxel planet configuration for the NovaForge editor."

[dependencies]
bevy              = { workspace = true }
bevy_egui         = { workspace = true }
atlas_editor_core    = { workspace = true }
atlas_voxel_planet   = { workspace = true }
