[package]
name    = "atlas_gizmos"
version = "0.1.0"
edition = "2021"
description = "Transform gizmos (translate/rotate/scale), grid snapping, and picking helpers."

[dependencies]
bevy            = { workspace = true }
atlas_core         = { workspace = true }
atlas_commands     = { workspace = true }
atlas_editor_core  = { workspace = true }
atlas_selection    = { workspace = true }
