[package]
name    = "atlas_runtime_app"
version = "0.1.0"
edition = "2021"
description = "Shipped game executable — composes runtime plugins only."

[[bin]]
name = "atlas_runtime_app"
path = "src/main.rs"

[dependencies]
bevy            = { workspace = true }
atlas_core         = { workspace = true }
atlas_voxel_planet = { workspace = true }
atlas_render       = { workspace = true }
atlas_scene        = { workspace = true }
atlas_assets       = { workspace = true }
