[package]
name    = "atlas_scene"
version = "0.1.0"
edition = "2021"
description = "Scene and prefab serialization format, stable entity IDs, and scene loading."

[dependencies]
bevy      = { workspace = true }
serde     = { workspace = true }
ron       = { workspace = true }
uuid      = { workspace = true }
atlas_core   = { workspace = true }
atlas_assets = { workspace = true }
