[package]
name    = "nf_editor_details"
version = "0.1.0"
edition = "2021"
description = "Details/Inspector panel: component fields, add/remove component, prefab override status."

[dependencies]
bevy           = { workspace = true }
bevy_egui      = { workspace = true }
nf_core        = { workspace = true }
nf_editor_core = { workspace = true }
nf_selection   = { workspace = true }
nf_commands    = { workspace = true }
nf_voxel_planet = { workspace = true }
