[package]
name    = "nf_editor_log"
version = "0.1.0"
edition = "2021"
description = "Output Log panel: errors, warnings, info, asset import messages, build output."

[dependencies]
bevy           = { workspace = true }
bevy_egui      = { workspace = true }
nf_core        = { workspace = true }
nf_editor_core = { workspace = true }
