[package]
name    = "nf_editor_outliner"
version = "0.1.0"
edition = "2021"
description = "World Outliner panel: entity hierarchy, search, visibility/lock toggles, drag-drop reparent."

[dependencies]
bevy           = { workspace = true }
bevy_egui      = { workspace = true }
nf_core        = { workspace = true }
nf_editor_core = { workspace = true }
nf_selection   = { workspace = true }
nf_commands    = { workspace = true }
