[package]
name    = "nf_editor_project"
version = "0.1.0"
edition = "2021"
description = "Project loading, settings, content root paths, and project-level configuration."

[dependencies]
bevy           = { workspace = true }
serde          = { workspace = true }
ron            = { workspace = true }
nf_core        = { workspace = true }
nf_assets      = { workspace = true }
nf_editor_core = { workspace = true }
